# django-dynamodb-cache

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  cov.xml  docker-compose.yml  manage.py  pyproject.toml  tox.ini
.github/workflows/: publish.yml  tests.yml
django_dynamodb_cache/: __init__.py  backend.py  cache.py  dynamodb.py  exceptions.py  helper.py  settings.py
django_dynamodb_cache/compact/django/: cache.py
django_dynamodb_cache/compact/django/management/command/: create_dynamodb_cache.py
django_dynamodb_cache/encode/: __init__.py  base.py  pickle.py
django_dynamodb_cache/management/command/: createcachetable.py
django_dynamodb_cache/management/commands/: createcachetable.py
docker/dynamodb/: shared-local-instance.db
scripts/: lint-test.sh
tests/: conf.py  conftest.py  test_cache_simple.py  test_create_table.py  test_django.py  test_settings.py  urls.py
tests/django/: asgi.py  settings.py  urls.py  view.py  wsgi.py
tests/settings/: settings.py
