[tool.poetry]
name = "django-dynamodb-cache"
version = "0.3.0"
description = ""
authors = ["xncbf <xncbf12@gmail.com>"]
keywords = ["django", "dynamodb", "cache", "django cache backend"]
classifiers = [
    "Framework :: Django :: 3",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4",
    "Framework :: Django :: 4.0",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
homepage = "https://github.com/xncbf/django-dynamodb-cache"
repository = "https://github.com/xncbf/django-dynamodb-cache"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
boto3 = "^1.21.9"
botocore = "^1.24.9"


[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^6.2.5"
black = "21.11b1"
flake8 = "^4.0.1"
mypy = "^0.931"
isort = "^5.10.1"
Faker = "^11.3.0"
factory-boy = "^3.2.1"
moto = {extras = ["all"], version = "^3.1.1"}
tox = "^3.24.5"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.mypy]
python_version = '3.10'
ignore_missing_imports = 'True'

[tool.isort]
profile = "black"
line_length = 120
sections= ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# https://docs.pytest.org/en/6.2.x/reference.html
[tool.pytest.ini_options]
minversion = "6.2.5"
log_cli = "true"
log_level = "INFO"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]
