[tool.poetry]
name = "django-dynamodb-cache"
version = "0.6.0"
description = ""
authors = ["xncbf <xncbf12@gmail.com>"]
keywords = ["django", "dynamodb", "cache", "django cache backend"]
classifiers = [
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
homepage = "https://github.com/xncbf/django-dynamodb-cache"
repository = "https://github.com/xncbf/django-dynamodb-cache"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=3.2,<6"
boto3 = "^1.21.9"
botocore = "^1.24.9"


[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^6.2.5"
black = "21.11b1"
mypy = "^0.931"
Faker = "^11.3.0"
factory-boy = "^3.2.1"
moto = {extras = ["all"], version = "^3.1.1"}
tox = "^3.24.5"
ruff = "0.0.285"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.mypy]
python_version = '3.10'
ignore_missing_imports = 'True'

# https://docs.pytest.org/en/6.2.x/reference.html
[tool.pytest.ini_options]
minversion = "6.2.5"
log_cli = "true"
log_level = "INFO"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "I001"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I001"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "backlog",
]
per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 50
